[package]
name = "infinidash"
version = "0.1.0"
description = "The Rust AWS Infinidash library"
authors = ["Rafael Caricio <rafael@caricio.com>"]
edition = "2018"
license = "MIT/GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infinidash-aws = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.10-alpha", package = "aws-sdk-dynamodb", optional = true }
tokio = { version = "1", features = ["full"] }
