[package]
name = "infinidash"
version = "0.8.42"
description = "The Rust AWS Infinidash library"
authors = ["Rafael Caricio <rafael@caricio.com>"]
repository = "https://github.com/rafaelcaricio/aws-infinidash-rs"
edition = "2018"
license = "MIT/GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# infinidash-aws = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "aws-sdk-infinidash" }
web3 = "0.16.0"
tokio = { version = "1", features = ["full"] }
